--- a/app/src/main/res/layout/item_doing.xml
+++ b/app/src/main/res/layout/item_doing.xml
@@ -11,25 +11,27 @@
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/hourTextView"
+            android:id="@+id/titleDoing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:paddingVertical="8dp"
-            android:textSize="20sp"
+            android:layout_margin="4dp"
+            android:maxLines="1"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="14:00-15:00" />
+            tools:text="Купить продукты" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/doingRecyclerView"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/descriptionDoing"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/hourTextView"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:itemCount="3"
-            tools:listitem="@layout/item_doing" />
+            android:layout_marginHorizontal="4dp"
+            android:paddingBottom="4dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/titleDoing"
+            tools:text="мясо, колбасу, вот это вот всё" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
